welcome.lessons.welcome.loopfor.LoopCourseForest.scala.error
Runner:4: error: Invalid literal number
for(i<-1to 4)
       ^Runner:12: error: ')' expected but '}' found.
	}
        ^